--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@ Unlocked 2/51 <a href="http://github.com/bauglir/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-     27 status
-     26 symbolic-ref
-      9 achievements
-      4 checkout
-      3 branch
-      2 svn
-      1 config
+     69 status
+     64 symbolic-ref
+     10 achievements
+      5 checkout
+      5 branch
+      3 svn
+      2 config
+      1 rebase
+      1 fetch
+      1 diff
 </pre>
 <script type="text/javascript">
 function showLocked() {
