New achievement Product Manager (Level 4)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Joris Kraak's Git Achievements <img src='http://www.gravatar.com/avatar/e8419ba6a2d78def12cf72b445df988f'/></h2>
-Unlocked 17/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 187 points<br>
+Unlocked 17/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 192 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -57,6 +57,7 @@ Unlocked 17/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 <li><div class="title">Goldsmith (Level 6)</div>  <div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
 <li><div class="title">Master Author (Level 7)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -67,29 +68,29 @@ Unlocked 17/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   3804 status
-   3255 symbolic-ref
-    236 add
-    195 commit
-    194 diff
-     85 checkout
+   4050 status
+   3441 symbolic-ref
+    250 add
+    215 diff
+    207 commit
+     87 checkout
      52 mv
-     22 rm
-     19 svn
-     17 branch
+     24 rm
+     21 svn
+     19 branch
+     16 stash
      16 reset
      16 push
-     14 stash
-     12 rebase
+     13 rebase
      11 achievements
       8 tag
       6 remote
       6 clone
+      5 merge
       5 fetch
-      4 merge
+      4 log
       4 config
       3 reflog
-      3 log
       3 help
       2 Wed
       2 Thu
